# CG-Project

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  freeglut.pc  imgui.ini  main.cpp  test.py
.github/workflows/: ci-format.yml
common/: CMakeLists.txt
common/include/: utils.hpp
common/src/: utils.cpp
demos/: test_3_1.webm
engine/: CMakeLists.txt  README.md  imgui.ini  main.cpp  test.xml
engine/include/: Camera.hpp  Configuration.hpp  Window.hpp  controller.hpp  curves.hpp  draw.hpp  frustsum.hpp  group.hpp  input.hpp  light.hpp  menuimgui.hpp  model.hpp  parse.hpp  read.hpp  save.hpp  utils.hpp  vertex.hpp
engine/src/: CMakeCache.txt  Camera.cpp  Configuration.cpp  Window.cpp  controller.cpp  curves.cpp  draw.cpp  frustsum.cpp  group.cpp  input.cpp  light.cpp  main.cpp  menuimgui.cpp  model.cpp  parse.cpp  read.cpp  save.cpp  utils.cpp  vertex.cpp
generator/: CMakeLists.txt
generator/include/: save3d.hpp  utils.hpp
generator/include/shapes/: cone.hpp  cube.hpp  cylinder.hpp  patches.hpp  plane.hpp  sphere.hpp  torus.hpp
generator/src/: main.cpp  save3d.cpp  utils.cpp
generator/src/shapes/: cone.cpp  cube.cpp  cylinder.cpp  patches.cpp  plane.cpp  sphere.cpp  torus.cpp
include/: figure.hpp  figure_generator.hpp
lib/rapidxml/: rapidxml.hpp  rapidxml_print.hpp  rapidxml_utils.hpp
lib/rapidxml-1.13/: rapidxml.hpp  rapidxml_ext.hpp  rapidxml_print.hpp  rapidxml_utils.hpp
models/: box.3d  cil.3d  comet.3d  cone.3d  cylinder.3d  duck.3d  normal_box.3d  plane_2_3.3d  sphere.3d  sphere_10.3d  torus.3d
models/advanced/: bezier_10.3d  box.3d  box_2_3.3d  comet.3d  cone.3d  cone_1_2_4_3.3d  cylinder.3d  duck.3d  plane.3d  plane_2_3.3d  ring.3d  sphere.3d  sphere_1_8_8.3d  sphere_low_res.3d  teapot.3d  teste.3d  torus.3d
models/simple/: bezier_10.3d  cone_1_2_4_3.3d  plane.3d  sphere_10.3d  sphere_1_8_8.3d  sphere_low_res.3d  torus.3d
patches/: rubber_duck.patch
scenes/: cubes.xml  default.xml  last_scene.xml  multiple.xml  obj_3d.xml  pdf.xml  race.xml  scene_bezier.xml  scene_box.xml  scene_comet.xml  scene_cone.xml  scene_cylinder.xml  scene_ferrari.xml  scene_obj.xml  scene_plane.xml  scene_romrot.xml  scene_rubberduck.xml  scene_sphere.xml  scene_teapot.xml  scene_torus.xml  scene_translate.xml  solar_system.xml  solar_system_v2.xml  solar_systemf2.xml  solar_systemf3.xml  solar_systemf4.xml  test.xml  test2.xml  test_1_2.xml  test_1_3.xml  test_1_4.xml  test_1_5.xml  test_obj.xml
scenes/advanced/: comet.xml  cylinder.xml  default.xml  ferrari.xml  order.xml  test.xml  torus.xml
scenes/save/: latest.xml  log_0.xml  log_1.xml
scenes/simple/: default.xml  multiple.xml  obj_3d.xml  race.xml  scene_bezier.xml  scene_box.xml  scene_comet.xml  scene_cone.xml  scene_cylinder.xml  scene_ferrari.xml  scene_obj.xml  scene_plane.xml  scene_romrot.xml  scene_rubberduck.xml  scene_sphere.xml  scene_teapot.xml  scene_torus.xml  scene_translate.xml
scenes/test/: test_1_1.xml  test_1_2.xml  test_1_3.xml  test_1_4.xml  test_1_5.xml  test_2_1.xml  test_2_2.xml  test_2_3.xml  test_2_4.xml  test_3_1.xml  test_3_2.xml  test_4_1.xml  test_4_2.xml  test_4_3.xml  test_4_4.xml  test_4_5.xml  test_4_6.xml
scripts/: build.sh  channels_formats.py  clean.sh  format.sh  frustsum.py  rebuild.sh  uniq.py
src/: engine.cpp  figure.cpp  figure_generator.cpp  generator.cpp
